--- a/.github/workflows/test-run-notebook.yml
+++ b/.github/workflows/test-run-notebook.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install system dependencies for OpenCV
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgl1-mesa-glx
+          sudo apt-get install -y libgl1 libx11-6 libgtk2.0-0 libcanberra-gtk-modul
     
       - name: Install Dependencies
         run: |
