--- a/.github/workflows/schedule-analysis-fi-notebook.yml
+++ b/.github/workflows/schedule-analysis-fi-notebook.yml
@@ -24,14 +24,32 @@ jobs:
           
           pip install --no-cache-dir pandas numpy requests beautifulsoup4 selenium webdriver-manager google-api-python-client jupyter papermill
       
-      - name: Install Chrome and ChromeDriver
+      - name: Install dependencies for Chrome
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y -o Dpkg::Options::="--force-confnew" ca-certificates curl google-chrome-stable
+          sudo apt-get update
+          sudo apt-get install -y \
+            wget \
+            curl \
+            unzip \
+            libgconf-2-4 \
+            libnss3 \
+            libx11-xcb1 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxrandr2 \
+            xdg-utils \
+            libgbm-dev \
+            libasound2
+     
+     - name: Install Chrome and ChromeDriver
+        run: |
+          # Install Google Chrome
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo dpkg -i google-chrome-stable_current_amd64.deb
+          sudo apt-get install -f
 
-          
-             # Use WebDriver Manager (Recommended)
-          python -c "from webdriver_manager.chrome import ChromeDriverManager; print(ChromeDriverManager().install())"
+          # Install ChromeDriver using WebDriver Manager
+          pip install webdriver-manager
 
      
       - name: Create Google Credentials File
@@ -53,8 +71,6 @@ jobs:
           python -c "from google.oauth2 import service_account; creds = service_account.Credentials.from_service_account_file('/tmp/credentials.json', scopes=['https://www.googleapis.com/auth/drive'])"
       
 
-        
-          
           papermill download_FI.ipynb output.ipynb
 
       - name: Upload Output Notebook as Artifact
