--- a/.github/workflows/schedule-analysis-fi-notebook.yml
+++ b/.github/workflows/schedule-analysis-fi-notebook.yml
@@ -26,8 +26,20 @@ jobs:
       - name: Install dependencies for Chrome
         run: |
           sudo apt-get update
-          sudo apt-get install -y  wget curl unzip  libgconf-2-4 libnss3 libx11-xcb1 libxcomposite1 libxdamage1 libxrandr2 xdg-utils  libgbm-dev  libasound2
-    
+          sudo apt-get install -y \
+            wget \
+            curl \
+            unzip \
+            libnss3 \
+            libx11-xcb1 \
+            libxcomposite1 \
+            libxdamage1 \
+            libxrandr2 \
+            xdg-utils \
+            libgbm-dev \
+            libasound2-plugins \
+            # Removed the problematic libgconf-2-4 and libasound2
+            
       - name: Install Chrome and ChromeDriver
         run: |
           # Install Google Chrome
