--- a/.github/workflows/schedule-analysis-fi-notebook.yml
+++ b/.github/workflows/schedule-analysis-fi-notebook.yml
@@ -41,11 +41,15 @@ jobs:
 
       - name: Test Chrome in Headless Mode
         run: |
-          google-chrome --headless=new --disable-gpu --no-sandbox \
-          --disable-dev-shm-usage --disable-software-rasterizer \
-          --disable-features=UseOzonePlatform --no-zygote \
-          --remote-debugging-port=9222 https://www.google.com & sleep 5
-          pkill chrome || true
+         # Ensure any running Chrome processes are stopped
+         pkill -f "chrome" || true
+         # Run Chrome headlessly with proper flags
+         google-chrome --headless --disable-gpu --no-sandbox \
+         --disable-software-rasterizer --disable-features=UseOzonePlatform \
+         --remote-debugging-port=9222 https://www.google.com & sleep 5
+
+         # Stop any lingering chrome processes (optional step)
+         pkill -f "chrome" || true
       
      
       - name: Create Google Credentials File
