--- a/.github/workflows/test-chrome.yml
+++ b/.github/workflows/test-chrome.yml
@@ -52,3 +52,8 @@ jobs:
         run: |
           ls -l /usr/bin/google-chrome
           ls -l /usr/bin/chromedriver
+          
+      - name: Check executable permissions
+        run: |
+          ls -l /etc/alternatives/google-chrome
+          ls -l /usr/local/share/chromedriver-linux64/chromedriver
