--- a/.github/workflows/Schedule-oceny-fi-script.yml
+++ b/.github/workflows/Schedule-oceny-fi-script.yml
@@ -3,7 +3,7 @@ name: Download and analyse FI from Stooq
 on:
   workflow_dispatch:  # Allows manual trigger
   schedule:
-    - cron: "0 2 * * *"  # Runs daily at 2 AM UTC
+    - cron: "0 0 * * *"  # Runs daily at midn UTC
 
 jobs:
   build:
