--- a/.github/workflows/Schedule-oceny-fi-script.yml
+++ b/.github/workflows/Schedule-oceny-fi-script.yml
@@ -18,37 +18,11 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Selenium and webdriver_manager
+      - name: Install python deps
         run: |
-          pip install selenium webdriver-manager pandas numpy requests beautifulsoup4 google-api-python-client
+          pip install  pandas numpy requests  google-api-python-client
 
-      - name: Run Minimal Selenium Test
-        run: |
-          python <<EOF
-          from selenium import webdriver
-          from selenium.webdriver.chrome.service import Service
-          from webdriver_manager.chrome import ChromeDriverManager
-          from selenium.webdriver.chrome.options import Options
-
-          options = Options()
-          options.add_argument('--headless=new')
-          options.add_argument('--no-sandbox')
-          options.add_argument('--disable-dev-shm-usage')
-
-          try:
-              driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)
-              driver.get("https://www.stooq.pl")
-              print("Chrome launched successfully  for target site stooq.pl!!")
-              driver.quit()
-          except Exception as e:
-              print(f"Error: {e}")
-          EOF
-
-      - name: Verify Chrome and ChromeDriver versions
-        run: |
-          google-chrome --version
-          chromedriver --version
-
+      
       - name: Create Google Credentials File
         run: |
           echo '${{ secrets.GOOGLE_CREDENTIALS }}' > /tmp/credentials.json
@@ -58,9 +32,7 @@ jobs:
         run: |
           python -c "import json; json.load(open('/tmp/credentials.json'))" && echo "JSON is valid."
           
-      - name: Install Xvfb
+
+      - name: Run Python script
         run: |
-          sudo apt-get install -y xvfb
-      - name: Run Xvfb
-        run: |
-          xvfb-run --server-args="-screen 0 1280x720x24" python Download-oceny-FI.py
+          python Download-oceny-FI.py
