--- a/.github/workflows/Schedule-oceny-fi-script.yml
+++ b/.github/workflows/Schedule-oceny-fi-script.yml
@@ -36,3 +36,9 @@ jobs:
       - name: Run Python script
         run: |
           python Download-oceny-FI.py
+      
+      - name: Upload log file as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: download-logs
+          path: download.log
