--- a/.github/workflows/schedule-nazwy-fi-script.yml
+++ b/.github/workflows/schedule-nazwy-fi-script.yml
@@ -61,6 +61,12 @@ jobs:
       - name: Install Xvfb
         run: |
           sudo apt-get install -y xvfb
+
+      - name: Set range of indexes to run
+        env:
+          MIN_INDEX: 1000 
+          MAX_INDEX: 1500 
+
       - name: Run Xvfb
         run: |
           xvfb-run --server-args="-screen 0 1280x720x24" python Download-nazwy-FI.py
