--- a/.github/workflows/Schedule-oceny-fi-script.yml
+++ b/.github/workflows/Schedule-oceny-fi-script.yml
@@ -33,6 +33,12 @@ jobs:
           python -c "import json; json.load(open('/tmp/credentials.json'))" && echo "JSON is valid."
           
 
+      - name: Set range of indexes to run
+        env:
+          MIN_INDEX: 1000 
+          MAX_INDEX: 1500 
+
+
       - name: Run Python script
         run: |
           python Download-oceny-FI.py
