--- a/.github/workflows/schedule-nazwy-3000-pl-fi-script.yml
+++ b/.github/workflows/schedule-nazwy-3000-pl-fi-script.yml
@@ -1,9 +1,9 @@
-name: Download  FI names index below 3000 from Stooq
+name: Download  FI names index 3000 plus from Stooq
 
 on:
   workflow_dispatch:  # Allows manual trigger
   schedule:
-    - cron: "30 0 15 * *"  # Runs monthly on 15th at 0:30 UTC
+    - cron: "30 2 15 * *"  # Runs monthly on 15th at 2:30 UTC
 
 jobs:
   process_stooq_data:
@@ -64,8 +64,8 @@ jobs:
      
       - name: Set range of indexes to run Xvfb
         env:
-          MIN_INDEX: 1000 
-          MAX_INDEX: 3000
+          MIN_INDEX: 3000 
+          MAX_INDEX: 6000
         run: |
           xvfb-run --server-args="-screen 0 1280x720x24" python Download-nazwy-FI.py
           
