--- a/.github/workflows/Schedule-oceny-fi-script-3500.yml
+++ b/.github/workflows/Schedule-oceny-fi-script-3500.yml
@@ -1,9 +1,9 @@
-name: Download 1000 and analyse FI from Stooq
+name: Download 3500 and analyse FI from Stooq
 
 on:
   workflow_dispatch:  # Allows manual trigger
   schedule:
-    - cron: "0 0 * * *"  # Runs daily at midn UTC
+    - cron: "30 2 * * *"  # Runs daily at 2:30 UTC
 
 jobs: 
   process_stooq_data:
@@ -36,8 +36,8 @@ jobs:
 
       - name: Set range of indexes and run Python script
         env:
-          MIN_INDEX: 1000 
-          MAX_INDEX: 1500 
+          MIN_INDEX: 3500 
+          MAX_INDEX: 4000 
 
         run: |
           python Download-oceny-FI.py
