--- a/.github/workflows/schedule-nazwy-3000-pl-fi-script.yml
+++ b/.github/workflows/schedule-nazwy-3000-pl-fi-script.yml
@@ -1,4 +1,4 @@
-name: Download  FI names index 3000 plus from Stooq
+name: Download  FI names index 3000 to 4000 from Stooq
 
 on:
   workflow_dispatch:  # Allows manual trigger
@@ -65,7 +65,7 @@ jobs:
       - name: Set range of indexes to run Xvfb
         env:
           MIN_INDEX: 3000 
-          MAX_INDEX: 6000
+          MAX_INDEX: 4000
         run: |
           xvfb-run --server-args="-screen 0 1280x720x24" python Download-nazwy-FI.py
           
