--- a/.github/workflows/schedule-nazwy-5000-pl-fi-script.yml
+++ b/.github/workflows/schedule-nazwy-5000-pl-fi-script.yml
@@ -1,9 +1,9 @@
-name: Download  FI names index below 2000 from Stooq
+name: Download  FI names index 5000 to 6000 from Stooq
 
 on:
   workflow_dispatch:  # Allows manual trigger
   schedule:
-    - cron: "30 9 15 * *"  # Runs monthly on 15th at 9:30 UTC
+    - cron: "30 12 15 * *"  # Runs monthly on 15th at 12:30 UTC
 
 jobs:
   process_stooq_data:
@@ -64,8 +64,8 @@ jobs:
      
       - name: Set range of indexes to run Xvfb
         env:
-          MIN_INDEX: 1000 
-          MAX_INDEX: 2000
+          MIN_INDEX: 5000 
+          MAX_INDEX: 6000
         run: |
           xvfb-run --server-args="-screen 0 1280x720x24" python Download-nazwy-FI.py
           
