update with env vars

--- a/.github/workflows/Schedule-oceny-fi-script-3500.yml
+++ b/.github/workflows/Schedule-oceny-fi-script-3500.yml
@@ -38,6 +38,8 @@ jobs:
         env:
           MIN_INDEX: 3500 
           MAX_INDEX: 4000 
+          CSV_BASE_URL: ${{ secrets.CSV_BASE_URL }}
+          FOLDER_NAME: ${{ secrets.FOLDER_NAME }}
 
         run: |
           python Download-oceny-FI.py
