--- a/.github/workflows/Schedule-oceny-fi-script-1500.yml
+++ b/.github/workflows/Schedule-oceny-fi-script-1500.yml
@@ -38,6 +38,8 @@ jobs:
         env:
           MIN_INDEX: 1500 
           MAX_INDEX: 2000 
+          CSV_BASE_URL: ${{ secrets.CSV_BASE_URL }}
+          FOLDER_NAME: ${{ secrets.FOLDER_NAME }}
 
         run: |
           python Download-oceny-FI.py
