--- a/.github/workflows/Schedule-oceny-fi-script-2000.yml
+++ b/.github/workflows/Schedule-oceny-fi-script-2000.yml
@@ -37,7 +37,9 @@ jobs:
       - name: Set range of indexes and run Python script
         env:
           MIN_INDEX: 2000 
-          MAX_INDEX: 2500 
+          MAX_INDEX: 2500
+          CSV_BASE_URL: ${{ secrets.CSV_BASE_URL }}
+          FOLDER_NAME: ${{ secrets.FOLDER_NAME }}
 
         run: |
           python Download-oceny-FI.py
