--- a/.github/workflows/Schedule-oceny-fi-script.yml
+++ b/.github/workflows/Schedule-oceny-fi-script.yml
@@ -38,7 +38,9 @@ jobs:
         env:
           MIN_INDEX: 1000 
           MAX_INDEX: 1500 
-
+          CSV_BASE_URL: ${{ secrets.CSV_BASE_URL }}
+          FOLDER_NAME: ${{ secrets.FOLDER_NAME }} 
+          
         run: |
           python Download-oceny-FI.py
       
