--- a/.github/workflows/schedule-download-dane-ppe.yml
+++ b/.github/workflows/schedule-download-dane-ppe.yml
@@ -48,7 +48,7 @@ jobs:
           INT_FILE_NAME : ${{ secrets.INT_FILE_NAME }}
         run: |
           # Here, use your Python script or notebook, and load credentials
-          python  download-ppe-data.py
+          python  Download-ppe-data.py
 
       - name: Upload log file as artifact
         uses: actions/upload-artifact@v4
