--- a/.github/workflows/Schedule-oceny-v2-fi-script.yml
+++ b/.github/workflows/Schedule-oceny-v2-fi-script.yml
@@ -49,3 +49,9 @@ jobs:
         with:
           name: download-logs
           path: download.log
+
+      - name: Upload outfiles file as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: csv-files
+          path: out_index.csv, out_series.csv
