--- a/.github/workflows/Schedule-oceny-fi-script-4500.yml
+++ b/.github/workflows/Schedule-oceny-fi-script-4500.yml
@@ -42,7 +42,7 @@ jobs:
           FOLDER_NAME: ${{ secrets.FOLDER_NAME }} 
 
         run: |
-          python Download-oceny-FI.py
+          python Download-oceny_v2-FI.py
       
       - name: Upload log file as artifact
         uses: actions/upload-artifact@v4
