--- a/.github/workflows/schedule-download-dane-ppe.yml
+++ b/.github/workflows/schedule-download-dane-ppe.yml
@@ -47,8 +47,7 @@ jobs:
           FOLDER_NAME : ${{ secrets.FOLDER_NAME }}
           INT_FILE_NAME : ${{ secrets.INT_FILE_NAME }}
         run: |
-          # Here, use your Python script or notebook, and load credentials
-          python  Download-ppe-data.py
+          python  Download-ppe-data-v2.py
 
       - name: Upload log file as artifact
         uses: actions/upload-artifact@v4
