--- a/.github/workflows/Test_strat.yml
+++ b/.github/workflows/Test_strat.yml
@@ -34,7 +34,7 @@ jobs:
           
    
 
-      #- name: Set range of indexes and run Python script
+      - name: run Python script, possibly later define list of indexes
       #  env:
       #    MIN_INDEX: 1006
       #    MAX_INDEX: 1008 
